--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 	"homepage": "https://github.com/munozr1/iloconfig#readme",
 	"dependencies": {
 		"axios": "^0.24.0",
+		"colors": "^1.4.0",
 		"yargs": "^17.3.0"
 	},
 	"bin": {
