--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "Configure HPE servers with ILO5",
 	"main": "index.js",
 	"scripts": {
-		"test": "testilo",
+		"test": "jest --watchAll --verbose",
 		"build": "tsc -p tsconfig.json",
 		"dev": "tsc -p tsconfig.json --watch"
 	},
